Made text view hotels button shorter to prevent unneccessary spacing.

--- a/src/hotels/components/HotelForm.scss
+++ b/src/hotels/components/HotelForm.scss
@@ -7,7 +7,7 @@
   color: #42ebf4;
   background: rgba(0, 0, 0, 0.25);
   padding: 1rem;
-  font-size: 25px;
+  font-size: 30px;
 
   h3,
   input {
